# museum-mgr

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  api_app.py  app.py  conftest.py  constants.py  data_fetcher.py  data_science.py  db.py  docker-compose.yml  exception_handlers.py  guards.py  init_db.sh  justfile  main.py  manage_db.py  model_analysis.ipynb  onnx_train_predict.py  pyproject.toml  settings.py  worker.py  worker_app.py  worker_settings.py
api_models/: base.py  city.py  museum.py  user.py
api_tester/: Dockerfile  conftest.py  models.py  pyproject.toml  test_e2e.py
cache/: README.md
clients/: db_client.py  manage_db.py  worker_client.py
controllers/: health.py  museum.py  user.py
data_science/: README.md  constants.py  data_fetcher.py  main.py  model_analysis.ipynb  models.py  onnx_train_predict.py
data_science/tests/: test_data_fetcher.py
middleware/: logging_middleware.py  request_id_middleware.py  user_check_middleware.py
migrations/: env.py  script.py.mako
migrations/versions/: 4a27fd8a9a66_initial_schema.py
orm/: city.py  museum.py  user.py
orm/models/: base.py  city.py  museum.py  user.py  visitor_prediction.py
tests/: conftest.py  factories.py  test_data_fetcher.py
tests/functional/: test_museum_api.py  test_user_api.py
tests/integration/: test_museum_orm.py  test_user.py  test_user_orm.py  test_worker_integration.py
