[project]
name = "museum-mgr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "numpy>=2.1.3",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "peewee>=3.18.2",
    "polars>=1.16.0",
    "scikit-learn>=1.7.2",
    "skl2onnx>=1.19.1",
]
dependency-groups.dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.2",
]

python-preference = "managed"

[tool.poetry]
package-mode = false

