[project]
name = "museum-mgr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4.0"
packages = ["api_models", "clients", "controllers", "middleware", "orm", "repositories"]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "numpy>=2.1.3",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "peewee>=3.18.2",
    "polars>=1.16.0",
    "scikit-learn>=1.7.2",
    "skl2onnx>=1.19.1",
    "litestar[standard]>=2.12.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.1",
    "advanced-alchemy>=0.19.3",
    "uuid-utils",
    "alembic>=1.13.1",
    "polyfactory>=2.15.0",
    "loguru>=0.7.2",
    "pgqueuer>=0.25.3",
]

[tool.uv]
python-preference = "managed"

[tool.uv.workspace]
members = [
    "data_science",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.2",
    "ty>=0.0.1a34",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.poetry]
package-mode = false

